@@ -7,14 +7,18 @@ import java.util.Stack;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Collectors;
 
+import lombok.NonNull;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import lombok.extern.slf4j.Slf4j;
-import organisation.structure.exercise.model.AnalysisResult;
-import organisation.structure.exercise.model.Employee;
-import organisation.structure.exercise.model.OrganizationalSummary;
-import organisation.structure.exercise.service.analysis.IOrganizationalAnalyzerService;
-import organisation.structure.exercise.util.EmployeeValidationUtil;
+import organisation.structure.exercise.core.model.AnalysisResult;
+import organisation.structure.exercise.core.model.Employee;
+import organisation.structure.exercise.core.model.OrganizationalSummary;
+import organisation.structure.exercise.core.util.CsvValidationUtil;
+import organisation.structure.exercise.service.analysis.OrganizationalAnalyzerService;
+import organisation.structure.exercise.core.util.EmployeeValidationUtil;
+import organisation.structure.exercise.service.csv.ICsvReaderService;
 
 /**
  * Optimized implementation of organizational analyzer service.
@@ -22,27 +26,26 @@ import organisation.structure.exercise.util.EmployeeValidationUtil;
  */
 @Slf4j
 @Service
-public class DefaultOrganizationalAnalyzerService implements IOrganizationalAnalyzerService {
-    
-    private static final int MAX_REPORTING_LEVELS = 4;
-    private static final double UNDERPAID_THRESHOLD = 1.2;
-    private static final double OVERPAID_THRESHOLD = 1.5;
+public class DefaultOrganizationalAnalyzerService implements OrganizationalAnalyzerService {
+
+    @Autowired
+    private ICsvReaderService csvReaderService;
     
     @Override
-    public AnalysisResult analyzeOrganizationalStructure(List<Employee> employees) {
-        log.info("Starting organizational structure analysis for {} employees", employees.size());
+    public AnalysisResult analyzeOrganizationalStructure(@NonNull final List<Employee> employees) {
+         log.info("[Organization Analyzes] Starting organizational structure analysis for {} employees", employees.size());
         
         try {
             // Validate input data
             if (!EmployeeValidationUtil.validateEmployees(employees)) {
-                log.error("Employee validation failed");
+                 log.error("[Organization Analyzes] Employee validation failed");
                 return AnalysisResult.failure("Employee validation failed");
             }
             
             // Build organizational hierarchy
             List<Employee> hierarchyEmployees = buildOrganizationalHierarchy(employees);
             if (hierarchyEmployees.isEmpty()) {
-                log.error("Failed to build organizational hierarchy");
+                 log.error("[Organization Analyzes] Failed to build organizational hierarchy");
                 return AnalysisResult.failure("Failed to build organizational hierarchy");
             }
             
@@ -58,7 +61,7 @@ public class DefaultOrganizationalAnalyzerService implements IOrganizationalAnal
             // Analyze reporting lines
             List<Employee> longReportingLines = findEmployeesWithLongReportingLines(hierarchyEmployees);
             
-            log.info("Organizational analysis completed successfully");
+            log.debug("[Organization Analyzes] Organizational analysis completed successfully");
             
             return AnalysisResult.success(summary, 
                     salaryAnalysis.getUnderpaidManagers(),
@@ -66,14 +69,14 @@ public class DefaultOrganizationalAnalyzerService implements IOrganizationalAnal
                     longReportingLines);
                     
         } catch (Exception e) {
-            log.error("Error during organizational analysis: {}", e.getMessage(), e);
+             log.error("[Organization Analyzes] Error during organizational analysis: {}", e.getMessage(), e);
             return AnalysisResult.failure("Error during organizational analysis: " + e.getMessage());
         }
     }
     
     @Override
-    public List<Employee> buildOrganizationalHierarchy(List<Employee> employees) {
-        log.debug("Building organizational hierarchy for {} employees", employees.size());
+    public List<Employee> buildOrganizationalHierarchy(@NonNull final List<Employee> employees) {
+        log.debug("[Organization Analyzes] Building organizational hierarchy for {} employees", employees.size());
         
         // Create employee lookup map for O(1) access
         Map<String, Employee> employeeMap = new ConcurrentHashMap<>();
@@ -86,7 +89,7 @@ public class DefaultOrganizationalAnalyzerService implements IOrganizationalAnal
                 .orElse(null);
         
         if (ceo == null) {
-            log.error("No CEO found in the organization");
+             log.error("[Organization Analyzes] No CEO found in the organization");
             return new ArrayList<>();
         }
         
@@ -99,18 +102,18 @@ public class DefaultOrganizationalAnalyzerService implements IOrganizationalAnal
                     if (manager != null) {
                         manager.getDirectSubordinates().add(employee);
                     } else {
-                        log.warn("Manager not found for employee: {} (Manager ID: {})", 
+                        log.warn("[Organization Analyzes] Manager not found for an employee: {} (Manager ID: {})", 
                                 employee.getFullName(), employee.getManagerId());
                     }
                 });
         
-        log.debug("Organizational hierarchy built successfully. CEO: {}", ceo.getFullName());
+        log.debug("[Organization Analyzes] Organizational hierarchy built successfully. CEO: {}", ceo.getFullName());
         return employees;
     }
     
     @Override
-    public void calculateReportingLevels(List<Employee> employees) {
-        log.debug("Calculating reporting levels for {} employees", employees.size());
+    public void calculateReportingLevels(@NonNull final List<Employee> employees) {
+        log.debug("[Organization Analyzes] Calculating reporting levels for {} employees", employees.size());
         
         Employee ceo = employees.stream()
                 .filter(Employee::isCEO)
@@ -118,7 +121,7 @@ public class DefaultOrganizationalAnalyzerService implements IOrganizationalAnal
                 .orElse(null);
         
         if (ceo == null) {
-            log.error("No CEO found for reporting level calculation");
+             log.error("[Organization Analyzes] No CEO found for reporting level calculation");
             return;
         }
         
@@ -126,42 +129,42 @@ public class DefaultOrganizationalAnalyzerService implements IOrganizationalAnal
     }
     
     @Override
-    public AnalysisResult analyzeManagerSalaries(List<Employee> employees) {
-        log.debug("Analyzing manager salaries for {} employees", employees.size());
+    public AnalysisResult analyzeManagerSalaries(@NonNull final List<Employee> employees) {
+        log.debug("[Organization Analyzes] Analyzing manager salaries for {} employees", employees.size());
         
         List<Employee> underpaidManagers = employees.stream()
                 .filter(Employee::hasSubordinates)
                 .filter(Employee::isUnderpaid)
-                .collect(Collectors.toList());
+                .toList();
         
         List<Employee> overpaidManagers = employees.stream()
                 .filter(Employee::hasSubordinates)
                 .filter(Employee::isOverpaid)
-                .collect(Collectors.toList());
+                .toList();
         
-        log.debug("Found {} underpaid and {} overpaid managers", 
+        log.debug("[Organization Analyzes] Found {} underpaid and {} overpaid managers", 
                 underpaidManagers.size(), overpaidManagers.size());
         
         return AnalysisResult.success(null, underpaidManagers, overpaidManagers, null);
     }
     
     @Override
-    public List<Employee> findEmployeesWithLongReportingLines(List<Employee> employees) {
-        log.debug("Finding employees with long reporting lines for {} employees", employees.size());
+    public List<Employee> findEmployeesWithLongReportingLines(@NonNull final List<Employee> employees) {
+        log.debug("[Organization Analyzes] Finding employees with long reporting lines for {} employees", employees.size());
         
         List<Employee> employeesWithLongReportingLines = employees.stream()
                 .filter(Employee::hasTooLongReportingLine)
-                .collect(Collectors.toList());
+                .toList();
         
-        log.debug("Found {} employees with too long reporting lines", 
+        log.debug("[Organization Analyzes] Found {} employees with too long reporting lines", 
                 employeesWithLongReportingLines.size());
         
         return employeesWithLongReportingLines;
     }
     
     @Override
-    public OrganizationalSummary generateOrganizationalSummary(List<Employee> employees) {
-        log.debug("Generating organizational summary for {} employees", employees.size());
+    public OrganizationalSummary generateOrganizationalSummary(@NonNull final List<Employee> employees) {
+        log.debug("[Organization Analyzes] Generating organizational summary for {} employees", employees.size());
         
         Employee ceo = employees.stream()
                 .filter(Employee::isCEO)
@@ -169,7 +172,7 @@ public class DefaultOrganizationalAnalyzerService implements IOrganizationalAnal
                 .orElse(null);
         
         if (ceo == null) {
-            log.error("No CEO found in the organization");
+             log.error("[Organization Analyzes] No CEO found in the organization");
             return null;
         }
         
@@ -261,6 +264,73 @@ public class DefaultOrganizationalAnalyzerService implements IOrganizationalAnal
         EmployeeLevel(Employee employee, int level) {
             this.employee = employee;
             this.level = level;
+        }
+    }
+
+    @Override
+    public AnalysisResult analyzeOrganizationFromCsv(String csvFilePath) {
+         log.info("[Organization Analyzes] Starting organizational analysis from the CSV file: {}", csvFilePath);
+
+        try {
+            // Validate input file
+            if (!validateInputFile(csvFilePath)) {
+                 log.error("[Organization Analyzes] Input file validation failed: {}", csvFilePath);
+                return AnalysisResult.failure("Invalid input file: " + csvFilePath);
+            }
+
+            // Read employees from CSV
+            List<Employee> employees = csvReaderService.readEmployeesFromCsv(csvFilePath);
+             log.info("[Organization Analyzes] Successfully loaded {} employees from CSV", employees.size());
+
+            // Perform comprehensive analysis
+            AnalysisResult result = analyzeOrganizationalStructure(employees);
+
+            if (result.isSuccess()) {
+                log.debug("[Organization Analyzes] Organizational analysis completed successfully");
+            } else {
+                 log.error("[Organization Analyzes] Organizational analysis failed: {}", result.getErrorMessage());
+            }
+
+            return result;
+
+        } catch (Exception e) {
+             log.error("[Organization Analyzes] Error during organizational analysis: {}", e.getMessage(), e);
+            return AnalysisResult.failure("Error during analysis: " + e.getMessage());
+        }
+    }
+
+    @Override
+    public boolean validateInputFile(String csvFilePath) {
+        log.debug("[Organization Analyzes] Validating input file: {}", csvFilePath);
+
+        // Use the CSV validation utility
+        if (!CsvValidationUtil.isValidCsvFile(csvFilePath)) {
+            log.warn("[Organization Analyzes] File validation failed: {}", csvFilePath);
+            return false;
+        }
+
+        // Use the CSV reader service validation
+        if (!csvReaderService.validateCsvFile(csvFilePath)) {
+            log.warn("[Organization Analyzes] CSV validation failed: {}", csvFilePath);
+            return false;
+        }
+
+        log.debug("[Organization Analyzes] Input file validation successful: {}", csvFilePath);
+        return true;
+    }
+
+    @Override
+    public long estimateMemoryRequirements(String csvFilePath) {
+        log.debug("[Organization Analyzes] Estimating memory requirements for: {}", csvFilePath);
+
+        try {
+            // Use the CSV validation utility for memory estimation
+            long estimatedMemory = CsvValidationUtil.estimateMemoryRequirements(csvFilePath);
+            log.debug("[Organization Analyzes] Estimated memory requirements: {} bytes", estimatedMemory);
+            return estimatedMemory;
+        } catch (Exception e) {
+            log.warn("[Organization Analyzes] Error estimating memory requirements: {}", e.getMessage());
+            return 0;
         }
     }
 }
